--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "d3": "^7.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "reactflow": "^11.10.4",
-    "zustand": "^4.5.2"
+    "reactflow": "^11.10.4"
   },
   "license": "MIT",
   "devDependencies": {
